--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
             <h2 class="text-2xl font-extrabold">Follow Me</h1>
             <ul class="mt-2">
             <li class="leading-10 -ml-2">
-              <a href="https://twitter.com/linkibol" 
+              <a href="https://twitter.com/linkibol"
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 rounded-md transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8"
               ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
                 style="vertical-align: middle;display: inline;position:relative; top: -3px"
@@ -60,7 +60,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
               Find me on the birdsite as <strong>@linkibol</strong>.</a>
             </li>
             <li class="leading-10 -ml-2">
-              <a href="https://twitch.tv/ZeroToHeroDev" 
+              <a href="https://twitch.tv/ZeroToHeroDev"
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 rounded-md transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8"
               ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
                 style="vertical-align: middle;display: inline;position:relative; top: -1px"
@@ -69,7 +69,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
               I live-stream code as <strong>ZeroToHeroDev</strong>.</a>
             </li>
             <li class="leading-10 -ml-2">
-              <a href="https://www.youtube.com/channel/UCdpJG2a5xmDRcYjjQuFH8KQ" 
+              <a href="https://www.youtube.com/channel/UCdpJG2a5xmDRcYjjQuFH8KQ"
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8 rounded-md"
               ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
                 style="vertical-align: middle;display: inline;position:relative; top: -1px;"
@@ -78,7 +78,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
               Playing <strong>That Note Smells Like Purple</strong>.</a>
             </li>
             <li class="leading-10 -ml-2">
-              <a href="https://zerotohero.dev" 
+              <a href="https://zerotohero.dev"
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 rounded-md transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8"
               ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
                 style="vertical-align: middle;display: inline;position:relative; top: -1px;"
@@ -87,7 +87,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
               I help people <em>level up</em> on <strong>Zero to Hero</strong>.</a>
             </li>
             <li class="leading-10 -ml-2">
-              <a href="https://linkedin.com/in/volkanozcelik" 
+              <a href="https://linkedin.com/in/volkanozcelik"
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 rounded-md transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8"
               ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
                 style="vertical-align: middle;display: inline;position:relative; top: -4px"
@@ -96,7 +96,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
               I am <strong>volkanozcelik</strong> on the “<em>pro birdsite</em>”.</a>
             </li>
             <li class="leading-10 -ml-2">
-              <a href="https://youtube.com/linkibol" 
+              <a href="https://youtube.com/linkibol"
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 rounded-md transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8"
               ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
                 style="vertical-align: middle;display: inline;position:relative; top: -2px"
@@ -105,7 +105,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
               I hadooken tech videos as <strong>linkibol</strong>.</a>
             </li>
             <li class="leading-10 -ml-2">
-              <a href="https://github.com/zerotohero-dev/" 
+              <a href="https://github.com/zerotohero-dev/"
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 rounded-md transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8"
               ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
                 style="vertical-align: middle;display: inline;position:relative; top: -3px"
@@ -114,7 +114,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
               The source is strong at <strong>zerotohero-dev</strong>.</a>
             </li>
             <li class="leading-10 -ml-2">
-              <a href="https://github.com/v0lkan/" 
+              <a href="https://github.com/v0lkan/"
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 rounded-md transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8"
               ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
                 style="vertical-align: middle;display: inline;position:relative; top: -3px;"
@@ -132,7 +132,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
             </div>
             <ul class="mt-2">
             <li class="leading-10 -ml-2">
-              <a href="https://www.zerotohero.dev/tag/highlights/" 
+              <a href="https://www.zerotohero.dev/tag/highlights/"
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 rounded-md transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8 rounded-md"
               ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
                 style="vertical-align: middle;display: inline; position:relative; top: -3px"
@@ -141,7 +141,25 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
               <strong>Zero to Hero</strong> Weekly Highlights</a>
             </li>
             <li class="leading-10 -ml-2">
-              <a href="https://www.zerotohero.dev/how-to-install-an-aws-eks-cluster-using-eksctl/" 
+              <a href="https://www.zerotohero.dev/roadmap/"
+                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8 rounded-md"
+              ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
+                    style="vertical-align: middle;display: inline; position:relative; top: -1px"
+                    class="mr-2"
+              ><g transform="matrix(1,0,0,1,0,0)"><defs><style>.c{fill:none;stroke:#191919;stroke-linecap:round;stroke-linejoin:round}</style></defs><path d="M21.207 4.5a1 1 0 0 1 .293.707V22.5a1 1 0 0 1-1 1h-17a1 1 0 0 1-1-1v-21a1 1 0 0 1 1-1h13.293a1 1 0 0 1 .707.293z" style="fill:#e3e3e3"></path><path d="M21.207 4.5 17.5.793A1 1 0 0 0 16.793.5H3.5a1 1 0 0 0-1 1v21a1 1 0 0 0 .293.707L21.324 4.676a.945.945 0 0 0-.117-.176z" style="fill:#ffffff"></path><path class="c" d="M21.207 4.5a1 1 0 0 1 .293.707V22.5a1 1 0 0 1-1 1h-17a1 1 0 0 1-1-1v-21a1 1 0 0 1 1-1h13.293a1 1 0 0 1 .707.293zM6 5.5h8.5M6 8.5h11.5M6 11.5h2m-2 3h2m-2 3h2"></path><path d="M18.5 13.5V19l-1.59-2.39a.5.5 0 0 0-.41-.22.464.464 0 0 0-.42.21l-1.33 1.9-.82-.66a.512.512 0 0 0-.73.11l-1.7 2.55a1 1 0 0 1-1-1v-6a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z" style="fill:#66e1ff"></path><path class="c" d="M13.25 14.5a.25.25 0 1 1-.25.25.25.25 0 0 1 .25-.25"></path><path d="M18.5 19v.5a1 1 0 0 1-1 1h-6l1.7-2.55a.512.512 0 0 1 .73-.11l.82.66 1.33-1.9a.464.464 0 0 1 .42-.21.5.5 0 0 1 .41.22z" style="fill:#78eb7b"></path><path class="c" d="M18.5 13.5V19l-1.59-2.39a.5.5 0 0 0-.41-.22.464.464 0 0 0-.42.21l-1.33 1.9-.82-.66a.512.512 0 0 0-.73.11l-1.7 2.55a1 1 0 0 1-1-1v-6a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z"></path><path class="c" d="M18.5 19v.5a1 1 0 0 1-1 1h-6l1.7-2.55a.512.512 0 0 1 .73-.11l.82.66 1.33-1.9a.464.464 0 0 1 .42-.21.5.5 0 0 1 .41.22z"></path></g></svg>
+                Be the Next Version of Yourself</a>
+            </li>
+            <li class="leading-10 -ml-2">
+              <a href="https://www.zerotohero.dev/learn-javascript-the-unconventional-way/"
+                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8 rounded-md"
+              ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
+                    style="vertical-align: middle;display: inline; position:relative; top: -1px"
+                    class="mr-2"
+              ><g transform="matrix(1,0,0,1,0,0)"><defs><style>.c{fill:none;stroke:#191919;stroke-linecap:round;stroke-linejoin:round}</style></defs><path d="M21.207 4.5a1 1 0 0 1 .293.707V22.5a1 1 0 0 1-1 1h-17a1 1 0 0 1-1-1v-21a1 1 0 0 1 1-1h13.293a1 1 0 0 1 .707.293z" style="fill:#e3e3e3"></path><path d="M21.207 4.5 17.5.793A1 1 0 0 0 16.793.5H3.5a1 1 0 0 0-1 1v21a1 1 0 0 0 .293.707L21.324 4.676a.945.945 0 0 0-.117-.176z" style="fill:#ffffff"></path><path class="c" d="M21.207 4.5a1 1 0 0 1 .293.707V22.5a1 1 0 0 1-1 1h-17a1 1 0 0 1-1-1v-21a1 1 0 0 1 1-1h13.293a1 1 0 0 1 .707.293zM6 5.5h8.5M6 8.5h11.5M6 11.5h2m-2 3h2m-2 3h2"></path><path d="M18.5 13.5V19l-1.59-2.39a.5.5 0 0 0-.41-.22.464.464 0 0 0-.42.21l-1.33 1.9-.82-.66a.512.512 0 0 0-.73.11l-1.7 2.55a1 1 0 0 1-1-1v-6a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z" style="fill:#66e1ff"></path><path class="c" d="M13.25 14.5a.25.25 0 1 1-.25.25.25.25 0 0 1 .25-.25"></path><path d="M18.5 19v.5a1 1 0 0 1-1 1h-6l1.7-2.55a.512.512 0 0 1 .73-.11l.82.66 1.33-1.9a.464.464 0 0 1 .42-.21.5.5 0 0 1 .41.22z" style="fill:#78eb7b"></path><path class="c" d="M18.5 13.5V19l-1.59-2.39a.5.5 0 0 0-.41-.22.464.464 0 0 0-.42.21l-1.33 1.9-.82-.66a.512.512 0 0 0-.73.11l-1.7 2.55a1 1 0 0 1-1-1v-6a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z"></path><path class="c" d="M18.5 19v.5a1 1 0 0 1-1 1h-6l1.7-2.55a.512.512 0 0 1 .73-.11l.82.66 1.33-1.9a.464.464 0 0 1 .42-.21.5.5 0 0 1 .41.22z"></path></g></svg>
+                Learn Your JavaScript the Unconventional Way</a>
+            </li>
+            <li class="leading-10 -ml-2">
+              <a href="https://www.zerotohero.dev/how-to-install-an-aws-eks-cluster-using-eksctl/"
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8 rounded-md"
               ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
                 style="vertical-align: middle;display: inline; position:relative; top: -1px"
@@ -150,16 +168,16 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
               How to Install an <strong>AWS EKS</strong> Cluster</a>
             </li>
             <li class="leading-10 -ml-2">
-              <a href="https://www.zerotohero.dev/spire-rocks/" 
+              <a href="https://www.zerotohero.dev/spire-rocks/"
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8 rounded-md"
               ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
                 style="vertical-align: middle;display: inline; position:relative; top: -1px"
                 class="mr-2"
               ><g transform="matrix(1,0,0,1,0,0)"><circle cx="12" cy="12" r="11.5" style="stroke-dasharray:7.505 2.814;stroke:#191919;stroke-linecap:round;stroke-linejoin:round;fill:none"></circle><circle cx="12" cy="12" r="7.5" style="fill:#78eb7b"></circle><path d="M6.7 17.3A7.5 7.5 0 0 1 17.3 6.7z" style="fill:#c9f7ca"></path><circle cx="12" cy="12" r="7.5" style="stroke:#191919;stroke-linecap:round;stroke-linejoin:round;fill:none"></circle><path d="M9.94 8.738A.274.274 0 0 0 9.5 9v6a.274.274 0 0 0 .44.262l5.589-3.024c.242-.131.242-.345 0-.476z" style="fill:#ffffff;stroke:#191919;stroke-linecap:round;stroke-linejoin:round"></path></g></svg>
               Setting Up <strong>SPIRE</strong> on <strong>AWS EKS</strong></a>
-            
+
             <li class="leading-10 -ml-2">
-              <a href="https://www.zerotohero.dev/scaling-your-node-api-like-a-boss/" 
+              <a href="https://www.zerotohero.dev/scaling-your-node-api-like-a-boss/"
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 rounded-md transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8"
               ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
                 style="vertical-align: middle;display: inline; position:relative; top: -1px"
@@ -168,16 +186,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
               Scaling Your <strong>Node.js</strong> API Like a Boss</a>
             </li>
             <li class="leading-10  -ml-2">
-              <a href="https://www.zerotohero.dev/how-to-work-with-private-go-repositories/" 
-                class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 rounded-md transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8"
-              ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
-                style="vertical-align: middle;display: inline; position:relative; top: -1px"
-                class="mr-2"
-              ><g transform="matrix(1,0,0,1,0,0)"><circle cx="12" cy="12" r="11.5" style="stroke-dasharray:7.505 2.814;stroke:#191919;stroke-linecap:round;stroke-linejoin:round;fill:none"></circle><circle cx="12" cy="12" r="7.5" style="fill:#78eb7b"></circle><path d="M6.7 17.3A7.5 7.5 0 0 1 17.3 6.7z" style="fill:#c9f7ca"></path><circle cx="12" cy="12" r="7.5" style="stroke:#191919;stroke-linecap:round;stroke-linejoin:round;fill:none"></circle><path d="M9.94 8.738A.274.274 0 0 0 9.5 9v6a.274.274 0 0 0 .44.262l5.589-3.024c.242-.131.242-.345 0-.476z" style="fill:#ffffff;stroke:#191919;stroke-linecap:round;stroke-linejoin:round"></path></g></svg>
-              Working With <strong>Private Go Repositories</strong></a>
-            </li> 
-            <li class="leading-10  -ml-2">
-              <a href="https://www.zerotohero.dev/deploying-a-microservice-to-k8s/" 
+              <a href="https://www.zerotohero.dev/deploying-a-microservice-to-k8s/"
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 rounded-md transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8"
               ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
                 style="vertical-align: middle;display: inline;position:relative; top: -1px"
@@ -186,7 +195,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
               The End-to-End Journey of a <strong>Microservice</strong></a>
             </li>
             <li class="leading-10  -ml-2">
-              <a href="https://www.youtube.com/watch?v=fgAWbpqStTE" 
+              <a href="https://www.youtube.com/watch?v=fgAWbpqStTE"
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 rounded-md transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8"
               ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
                 style="vertical-align: middle;display: inline; position:relative; top: -1px"
@@ -217,15 +226,15 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
           </div>
 
           <div class="mt-6 mb-6  max-w-md text-sm sm:text-lg text-gray-900 mx-auto border-l-8 border-yellow-400 bg-gray-100 p-4 leading-8 shadow-lg mb-10 pl-4 rounded-md italic" style="transform:rotate(-3deg)">
-            <p class="pl-2 sm:pl-12">I’m a big believer in <strong>asking questions</strong>.</p> 
-            <p  class="pl-2 sm:pl-12">It’s the <strong>curiosity</strong> that matters.</p> 
+            <p class="pl-2 sm:pl-12">I’m a big believer in <strong>asking questions</strong>.</p>
+            <p  class="pl-2 sm:pl-12">It’s the <strong>curiosity</strong> that matters.</p>
             <p  class="pl-2 sm:pl-12"><strong>Ideas matter</strong>.</p>
           </div>
 
           <div class="mt-6 mb-6 text-sm sm:text-lg text-gray-900 mx-auto">
             <p class="mt-2 mb-3"><strong>Since 2003</strong>, I have been all over the stack, as far as stack goes. I’ve created <strong>mobile</strong>, <strong>web</strong>, and <strong>desktop</strong> apps, played with <strong>SQL/NoSQL/GraphQL</strong> data stores, and more.</p>
-            <p class="mt-2 mb-3">I’ve <strong>automated</strong> the deployment of <strong>microservices</strong>, played with serverless, <strong>Kubernetes</strong>, 
-            and <strong>service meshes</strong>. I’ve used real-time databases, <strong>streams</strong>, WebSockets, 
+            <p class="mt-2 mb-3">I’ve <strong>automated</strong> the deployment of <strong>microservices</strong>, played with serverless, <strong>Kubernetes</strong>,
+            and <strong>service meshes</strong>. I’ve used real-time databases, <strong>streams</strong>, WebSockets,
             <strong>protocol buffers</strong>, lambda functions, and <strong>message queues</strong>. I’ve crafted solutions to improve the <strong>scalability</strong> and <strong>performance</strong> of distributed systems.</p>
             <p class="mt-2 mb-3">I’m pretty sure there’s much more to add to the list that I don’t remember right now.</p>
             <p class="mt-2 mb-3">Yet, that’s me in a nutshell: I’m a pragmatist nerd who likes to get <em>$#!%</em> done.</p>
