--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
                   I help people <em>level up</em> on <strong>Zero to Hero</strong>.</a>
               </li>
             <li class="leading-10 -ml-2">
-              <a href="https://twitter.com/linkibol"
+              <a href="http://hachyderm.io/web/@volkan"
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 rounded-md transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8"
-              ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
-                style="vertical-align: middle;display: inline;position:relative; top: -3px"
-                class="mr-2"
-><g transform="matrix(1,0,0,1,0,0)"><path d="m23 6.628-2-.5 1-2-2.464.7A4.48 4.48 0 0 0 12 8.128v1c-3.539.73-6.634-1.2-9.5-4.5q-.75 4 1.5 6l-3-.5c.405 2.069 1.362 3.7 4 4l-2.5 1c1 2 2.566 2.31 5 2.5a10.748 10.748 0 0 1-6.5 2c12.755 5.669 20-2.664 20-10V8.3z" style="fill:#66e1ff"></path><path d="M19.536 4.832A4.48 4.48 0 0 0 12 8.128v1c-3.539.73-6.634-1.2-9.5-4.5q-.75 4 1.5 6l-3-.5c.405 2.069 1.362 3.7 4 4l-2.5 1c.964 1.927 2.461 2.283 4.746 2.477L20.212 4.639z" style="fill:#c2f3ff"></path><path d="m23 6.628-2-.5 1-2-2.464.7A4.48 4.48 0 0 0 12 8.128v1c-3.539.73-6.634-1.2-9.5-4.5q-.75 4 1.5 6l-3-.5c.405 2.069 1.362 3.7 4 4l-2.5 1c1 2 2.566 2.31 5 2.5a10.748 10.748 0 0 1-6.5 2c12.755 5.669 20-2.664 20-10V8.3z" style="fill:none;stroke:#191919;stroke-linecap:round;stroke-linejoin:round"></path></g></svg>
-              Find me on the birdsite as <strong>@linkibol</strong>.</a>
+              ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                    style="vertical-align: middle;display: inline;position:relative; top: -1px;"
+                    class="mr-2"
+              ><g><path d="M22.88,5.22A5,5,0,0,0,21.45,2.6a6,6,0,0,0-1.9-1.18A17.62,17.62,0,0,0,16.5.57,20.29,20.29,0,0,0,7.29.51,8.21,8.21,0,0,0,2.23,4.22a8.84,8.84,0,0,0-1.13,3A23.41,23.41,0,0,0,1,11.86c0,1.38,0,2.86.11,4.3a12.68,12.68,0,0,0,.53,2.91A6.31,6.31,0,0,0,4.2,22.38,9.25,9.25,0,0,0,8.05,23.8c.42.06.85.14,1.28.18a4.13,4.13,0,0,0,.93,0,3.82,3.82,0,0,0,.62-.09.45.45,0,0,0,.3-.23,4,4,0,0,0,.31-1.13,9,9,0,0,0,.08-1.66.44.44,0,0,0-.4-.36l-.6-.05-.79-.11L9,20.17a4.08,4.08,0,0,1-1.86-1.06,2.85,2.85,0,0,1-.77-1.75h0A9.53,9.53,0,0,0,8,17.91a19.32,19.32,0,0,0,2.49.4,19,19,0,0,0,7-.13,6.59,6.59,0,0,0,3.95-2.63,8.34,8.34,0,0,0,1.36-3A15.75,15.75,0,0,0,23,9.4,20,20,0,0,0,22.88,5.22Zm-1,7.18a7.53,7.53,0,0,1-1.18,2.68,5.77,5.77,0,0,1-3.44,2.35,18.17,18.17,0,0,1-6.67.23,21.07,21.07,0,0,1-2.44-.35c-.46-.1-2.51-.9-2.47-.08a3.54,3.54,0,0,0,.94,2.36,4.64,4.64,0,0,0,2.17,1.28c.27.08.55.14.83.2l.83.13.34.09c0,.26,0,.57-.06.86a4.79,4.79,0,0,1-.21,1l-.38,0a3.23,3.23,0,0,1-.76,0C9,23.12,8.58,23,8.18,23A8.49,8.49,0,0,1,4.7,21.64a5.34,5.34,0,0,1-2.16-2.85,11.46,11.46,0,0,1-.45-2.7c-.1-1.42,0-2.89-.06-4.25a22.54,22.54,0,0,1,.15-4.42,7.93,7.93,0,0,1,1-2.63A7.2,7.2,0,0,1,7.6,1.6a19.06,19.06,0,0,1,8.67.07,15.69,15.69,0,0,1,2.87.77,4.86,4.86,0,0,1,1.57.94,4,4,0,0,1,1.17,2.07,18.5,18.5,0,0,1,.19,4A14.44,14.44,0,0,1,21.9,12.4Z" fill="#0C6FFF" fill-rule="evenodd"></path><path d="M4.59,10.05A1.55,1.55,0,0,0,6.4,11.5,2.09,2.09,0,0,0,8.2,9.39C8.14,6.66,4.35,7.58,4.59,10.05Zm1.69.32c-.68.11-.86-.58-.68-1.1.34-1,1.73-1.08,1.64.09A1.06,1.06,0,0,1,6.28,10.37Z" fill="#191919" fill-rule="evenodd"></path><path d="M10.85,8.38a2,2,0,0,0-.4.87A1.75,1.75,0,0,0,11,10.89a1.72,1.72,0,0,0,1.78.26,1.7,1.7,0,0,0,1-2.26C13.65,8.48,12.35,6.48,10.85,8.38Zm1.51,1.71A.66.66,0,0,1,11.7,10a.8.8,0,0,1-.34-.68c0-1.12,1.2-1.51,1.56-.16A.72.72,0,0,1,12.36,10.09Z" fill="#191919" fill-rule="evenodd"></path><path d="M19.13,7.71a1.85,1.85,0,0,0-.7-.23c-.82-.09-1.38.06-1.76,1.46a2.13,2.13,0,0,0,0,.91,1.44,1.44,0,0,0,1.14,1.2,2,2,0,0,0,1.58-.37A1.87,1.87,0,0,0,20,9.11,1.72,1.72,0,0,0,19.13,7.71Zm-.49,2.08A.83.83,0,0,1,18,10a.54.54,0,0,1-.47-.34,1.41,1.41,0,0,1-.06-.7c.14-.78.32-.76.74-.7a1,1,0,0,1,.47.22.82.82,0,0,1,.25.7A.78.78,0,0,1,18.64,9.79Z" fill="#191919" fill-rule="evenodd"></path>
+              </g></svg>
+              I am part of the revolution as <strong>@volkan@hachyderm.io</strong>.</a>
             </li>
 <!--            <li class="leading-10 -ml-2">-->
 <!--              <a href="https://twitch.tv/ZeroToHeroDev"-->
@@ -79,15 +80,15 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
 <!--              ><g transform="matrix(1,0,0,1,0,0)"><defs><style>.c{fill:none;stroke:#191919;stroke-linecap:round;stroke-linejoin:round}</style></defs><path d="M.5 5.777a1 1 0 0 1 .143-.515L3.354.743A.5.5 0 0 1 3.783.5H23a.5.5 0 0 1 .5.5v12.586a1 1 0 0 1-.293.707l-3.914 3.914a1 1 0 0 1-.707.293h-7.159a1 1 0 0 0-.722.308l-4.344 4.538A.5.5 0 0 1 5.5 23v-4a.5.5 0 0 0-.5-.5H1a.5.5 0 0 1-.5-.5z" style="fill:#eabfff"></path><path d="M4 14a.5.5 0 0 1-.5-.5V.588a.5.5 0 0 0-.146.155L.643 5.263a.991.991 0 0 0-.143.514V18a.5.5 0 0 0 .5.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 0 .861.346l4.344-4.538a1 1 0 0 1 .722-.308h7.159a1 1 0 0 0 .707-.293l3.914-3.914a.994.994 0 0 0 .2-.293z" style="fill:#d480ff"></path><path class="c" d="M.5 5.777a1 1 0 0 1 .143-.515L3.354.743A.5.5 0 0 1 3.783.5H23a.5.5 0 0 1 .5.5v12.586a1 1 0 0 1-.293.707l-3.914 3.914a1 1 0 0 1-.707.293h-7.159a1 1 0 0 0-.722.308l-4.344 4.538A.5.5 0 0 1 5.5 23v-4a.5.5 0 0 0-.5-.5H1a.5.5 0 0 1-.5-.5z"></path><path d="M6 2.5a.5.5 0 0 0-.5.5v12a.5.5 0 0 0 .5.5h1.5V18l2.5-2.5h8.086a1 1 0 0 0 .707-.293l2.414-2.414a1 1 0 0 0 .293-.707V3a.5.5 0 0 0-.5-.5z" style="fill:#ffffff"></path><path d="M21 2.5H6a.5.5 0 0 0-.5.5v2.5A.5.5 0 0 1 6 5h15a.5.5 0 0 1 .5.5V3a.5.5 0 0 0-.5-.5z" style="fill:#e3e3e3"></path><path class="c" d="M6 2.5a.5.5 0 0 0-.5.5v12a.5.5 0 0 0 .5.5h1.5V18l2.5-2.5h8.086a1 1 0 0 0 .707-.293l2.414-2.414a1 1 0 0 0 .293-.707V3a.5.5 0 0 0-.5-.5zm5.5 4v4m5-4v4"></path></g></svg>-->
 <!--              I live-stream code as <strong>ZeroToHeroDev</strong>.</a>-->
 <!--            </li>-->
-<!--            <li class="leading-10 -ml-2">-->
-<!--              <a href="https://www.youtube.com/channel/UCdpJG2a5xmDRcYjjQuFH8KQ"-->
-<!--                class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8 rounded-md"-->
-<!--              ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"-->
-<!--                style="vertical-align: middle;display: inline;position:relative; top: -1px;"-->
-<!--                class="mr-2"-->
-<!--              ><g transform="matrix(1,0,0,1,0,0)"><defs><style>.c{fill:none;stroke:#191919;stroke-linecap:round;stroke-linejoin:round}.d{fill:gray}</style></defs><path d="M8.5 15.428C1.963 14.811 1.186 8.705 4.159 5.4a.5.5 0 0 1 .438-.16.5.5 0 0 1 .378.271 2.627 2.627 0 0 0 2.574 1.4A7.059 7.059 0 0 1 14.418.666a.5.5 0 0 1 .513.647 5.362 5.362 0 0 0 1.686 5.6 2.394 2.394 0 0 0 2.556-1.321.5.5 0 0 1 .844-.089A6.928 6.928 0 0 1 21.5 9.7a4.983 4.983 0 0 1-2.5 4.415s-3.871 1.979-10.5 1.313z" style="fill:#fff7ae"></path><path d="M19 9.577s-3.871 1.979-10.5 1.313c-3-.284-4.777-1.729-5.544-3.525-1.311 3.322.158 7.555 5.544 8.063 6.629.666 10.5-1.313 10.5-1.313A4.983 4.983 0 0 0 21.5 9.7a6.5 6.5 0 0 0-.457-2.379A5.186 5.186 0 0 1 19 9.577z" style="fill:#ffbc44"></path><path class="c" d="M19 14.115A4.983 4.983 0 0 0 21.5 9.7a6.928 6.928 0 0 0-1.483-4.2.5.5 0 0 0-.844.089 2.394 2.394 0 0 1-2.556 1.321 5.362 5.362 0 0 1-1.686-5.6.5.5 0 0 0-.513-.647 7.059 7.059 0 0 0-6.869 6.251 2.627 2.627 0 0 1-2.574-1.4.5.5 0 0 0-.375-.27.5.5 0 0 0-.438.16c-2.487 2.762-2.35 7.488 1.59 9.319"></path><circle class="d" cx="6.5" cy="21.335" r="2"></circle><circle class="d" cx="14.5" cy="19.335" r="2"></circle><path class="c" d="M16.5 19.335v-6.8a1 1 0 0 0-1.184-.983l-6 1.125a1 1 0 0 0-.816.983v7.67"></path><circle class="c" cx="6.5" cy="21.335" r="2"></circle><circle class="c" cx="14.5" cy="19.335" r="2"></circle></g></svg>-->
-<!--              Playing <strong>That Note Smells Like Purple</strong>.</a>-->
-<!--            </li>-->
+            <li class="leading-10 -ml-2">
+              <a href="https://www.youtube.com/@SeeTheMusic"
+                class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8 rounded-md"
+              ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
+                style="vertical-align: middle;display: inline;position:relative; top: -1px;"
+                class="mr-2"
+              ><g transform="matrix(1,0,0,1,0,0)"><defs><style>.c{fill:none;stroke:#191919;stroke-linecap:round;stroke-linejoin:round}.d{fill:gray}</style></defs><path d="M8.5 15.428C1.963 14.811 1.186 8.705 4.159 5.4a.5.5 0 0 1 .438-.16.5.5 0 0 1 .378.271 2.627 2.627 0 0 0 2.574 1.4A7.059 7.059 0 0 1 14.418.666a.5.5 0 0 1 .513.647 5.362 5.362 0 0 0 1.686 5.6 2.394 2.394 0 0 0 2.556-1.321.5.5 0 0 1 .844-.089A6.928 6.928 0 0 1 21.5 9.7a4.983 4.983 0 0 1-2.5 4.415s-3.871 1.979-10.5 1.313z" style="fill:#fff7ae"></path><path d="M19 9.577s-3.871 1.979-10.5 1.313c-3-.284-4.777-1.729-5.544-3.525-1.311 3.322.158 7.555 5.544 8.063 6.629.666 10.5-1.313 10.5-1.313A4.983 4.983 0 0 0 21.5 9.7a6.5 6.5 0 0 0-.457-2.379A5.186 5.186 0 0 1 19 9.577z" style="fill:#ffbc44"></path><path class="c" d="M19 14.115A4.983 4.983 0 0 0 21.5 9.7a6.928 6.928 0 0 0-1.483-4.2.5.5 0 0 0-.844.089 2.394 2.394 0 0 1-2.556 1.321 5.362 5.362 0 0 1-1.686-5.6.5.5 0 0 0-.513-.647 7.059 7.059 0 0 0-6.869 6.251 2.627 2.627 0 0 1-2.574-1.4.5.5 0 0 0-.375-.27.5.5 0 0 0-.438.16c-2.487 2.762-2.35 7.488 1.59 9.319"></path><circle class="d" cx="6.5" cy="21.335" r="2"></circle><circle class="d" cx="14.5" cy="19.335" r="2"></circle><path class="c" d="M16.5 19.335v-6.8a1 1 0 0 0-1.184-.983l-6 1.125a1 1 0 0 0-.816.983v7.67"></path><circle class="c" cx="6.5" cy="21.335" r="2"></circle><circle class="c" cx="14.5" cy="19.335" r="2"></circle></g></svg>
+              I am an okayest <strong>pianist</strong>.</a>
+            </li>
 
             <li class="leading-10 -ml-2">
               <a href="https://linkedin.com/in/volkanozcelik"
@@ -247,6 +248,6 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
     </div>
   </div>
 
-<!--  <p class="text-center font-light text-gray-500 text-sm sm:text-lg mt-12" style="text-shadow: rgba(55,55,55,1) 1px 1px 4px;transform:rotate(-7deg)">Copyright © Volkan Özçelik</p>-->
+<p class="text-center font-light text-gray-500 text-sm sm:text-lg mt-12" style="text-shadow: rgba(55,55,55,1) 1px 1px 4px;transform:rotate(-7deg)">Copyright © Volkan Özçelik</p>
 </body>
 </html>
