--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
                       style="vertical-align: middle;display: inline;position:relative; top: -1px;"
                       class="mr-2"
                 ><g transform="matrix(1,0,0,1,0,0)"><defs><style>.c{fill:none;stroke:#191919;stroke-linecap:round;stroke-linejoin:round}</style></defs><rect x="6.5" y=".5" width="17" height="14" rx="1" style="fill:#66e1ff"></rect><path d="M7.5 14.5H8l14-14H7.5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1z" style="fill:#c2f3ff"></path><path class="c" d="M13 14.5h9.5a1 1 0 0 0 1-1v-12a1 1 0 0 0-1-1h-12"></path><path d="m7.5 23.5.5-6h2.5V14a5 5 0 0 0-10 0v3.5H3l.5 6z" style="fill:#78eb7b;stroke:#191919;stroke-linecap:round;stroke-linejoin:round"></path><circle cx="5.5" cy="4" r="3.5" style="fill:#ffdda1;stroke:#191919;stroke-linecap:round;stroke-linejoin:round"></circle><path class="c" d="M5.5 11v3"></path><path d="M6.667 4a5.805 5.805 0 0 0 2.286-.467 3.478 3.478 0 0 0-6.459-1.3A5.809 5.809 0 0 0 6.667 4z" style="fill:#c77f67;stroke:#191919;stroke-linecap:round;stroke-linejoin:round"></path><path class="c" d="M12.5 4.5 15 7l-2.5 2.5m5-2h4"></path></g></svg>
-                  I help people <em>level up</em> on <strong>Zero to Hero</strong>.</a>
+                  I help people <em>level up</em> at <strong>Zero to Hero</strong>.</a>
               </li>
             <li class="leading-10 -ml-2">
-              <a href="http://hachyderm.io/web/@volkan"
+              <a rel="me" href="https://hachyderm.io/@volkan"
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 rounded-md transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8"
               ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                     style="vertical-align: middle;display: inline;position:relative; top: -1px;"
@@ -249,5 +249,6 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
   </div>
 
 <p class="text-center font-light text-gray-500 text-sm sm:text-lg mt-12" style="text-shadow: rgba(55,55,55,1) 1px 1px 4px;transform:rotate(-7deg)">Copyright © Volkan Özçelik</p>
+
 </body>
 </html>
