--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
               cloud native crazy maker</span>
               <span class="block text-base text-center mt-2 font-light italic
               tracking-wide text-sm sm:text-sm p-2 m-auto
-              text-gray-500">nowadays, reinventing <strong class="font-extrabold">radio access networks</strong>
-                as you know it
+              text-gray-500">reinventing <strong class="font-extrabold">radio access networks</strong>
+                as you know it<br>
                 at <a href="https://www.broadcom.com" title="Broadcom"
                   class="font-extrabold hover:bg-yellow-100 hover:text-blue-700">Broadcom</a> Software-Defined Edge.</span>
             </h2>
