--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@ box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 <strong>creator</strong>, <strong>connector</strong>, and <strong>writer</strong>.
 I like tinkering with systems, and I’m not afraid to 
 break stuff.</p>
+
+<p>I’m a big believer in <strong>asking questions</strong>—It’s
+the <strong>curiosity</strong> that matters.</p>
+
 <p><a 
 href="https://www.vmware.com/products/cloud-infrastructure/vmware-cloud-foundation"
 title="VMware Cloud Foundation">
@@ -67,12 +71,12 @@ the <strong>SPIFFE Steering Committee</strong></a>.</li>
 <ul>
 <li><a href="https://github.com/spiffe/spike">I am the lead architect of 
 <strong>SPIKE</strong></a>.</li>
-<li><a href="https://github.com/vmware-tanzu/secrets-manager">I also lead
-<strong>VMware Secrets Manager</strong></a>.</li>
+<li><a href="https://github.com/spiffe">I also contribute to various projects
+under the <strong>SPIFFE</strong></a> umbrella.</li>
 </ul>
 
 <p><a href="https://github.com/zerotohero-dev">In addition to 
-<strong>SPIKE</strong> and <strong>VSecM</strong>,
+<strong>SPIKE</strong> and <strong>SPIFFE</strong>,
 some of my projects are in the <strong>zerotohero-dev</strong> GitHub org. 
 Though, they are mostly idle</a>.</p>
 
@@ -93,6 +97,8 @@ whenever I can</a>.</li>
 <strong>@volkan.io</strong> on <strong>BlueSky</strong></a>.</li>
 <li><a href="https://linkedin.com/in/volkanozcelik">I am 
 <strong>volkanozcelik</strong> on LinkedIn</a>.</li>
+<li><a href="https://discord.gg/kampus">I mentor turtles at
+<strong>Kampus</strong></a>.</li>
 <li><a href="mailto:me@volkan.io">You can email me at 
 <strong>me@volkan.io</strong>,<br>
 but I'm typically too busy to respond</a>.</li>
