--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 <main>
 <h1>Volkan Özçelik</h1>
 
-<p><img src="/me.jpeg" title="me" alt="me" />
+<p><img src="/volkan.png" title="me" alt="me" />
 
 <p>Hello, I'm Volkan 👋.</p>
 <p>I'm a <strong>developer</strong>, <strong>streamer</strong>, 
