--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ break stuff.</p>
 <p>I’m a big believer in <strong>asking questions</strong>—It’s
 the <strong>curiosity</strong> that matters.</p>
 
-<p><a 
+<p style="clear:both;"><a
 href="https://www.vmware.com/products/cloud-infrastructure/vmware-cloud-foundation"
 title="VMware Cloud Foundation">
 Currently, I am a <strong>Lead Principal Engineer</strong> at <strong>VMware 
