--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
 <style>
 h1{text-align:center;margin-bottom:1.52em;}
 body {font-family: monaco, Consolas, Lucida Console, monospace;
-font-size: 18px;line-height: 1.5em;background: #f2f1ed;color: #000000;}
+font-size: 18px;line-height: 1.5em;background: #322B37;color: #000000;}
 main {margin: 4em auto;max-width: 750px;background:#e2e0d7;padding: 1em;
 border-top: 1px #a39c80 solid;border-left: 1px #a39c80 solid;
 border-bottom: 1px #66604a solid;border-right: 1px #66604a solid;
-border-radius: 2px;
+border-radius: 4px;
 box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; 
 }
 a {color: #000;text-decoration: none;}
 a:hover {background: #0000ff;color: #ffffff;}
-img {width: 200px; height: 200px;float:left;margin-right: 1em;
+img {width: 200px; float:left;margin-right: 1em;
 margin-bottom:1em;border-radius:20px;
 box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; 
 }
