--- a/index.html
+++ b/index.html
@@ -12,13 +12,20 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
 <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
 <style>
 h1{text-align:center;margin-bottom:1.52em;}
-body {font-family: monaco, Consolas, Lucida Console, monospace;
-font-size: 18px;line-height: 1.5em;background: #322B37;color: #000000;}
+body {
+    font-family: 'MonoLisa Thin', MonoLisa, 'Berkeley Mono', 'SF Mono',
+    'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', 'Cascadia Code',
+    'Roboto Mono', ui-monospace, monospace;
+    font-size: 18px;line-height: 1.5em;background: #322B37;color: #000000;}
 main {margin: 4em auto;max-width: 750px;background:#e2e0d7;padding: 1em;
-border-top: 1px #a39c80 solid;border-left: 1px #a39c80 solid;
-border-bottom: 1px #66604a solid;border-right: 1px #66604a solid;
-border-radius: 4px;
-box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; 
+border-top: 12px #a39c80 solid;border-left: 1px #a39c80 solid;
+border-bottom: 12px #66604a solid;border-right: 1px #66604a solid;
+border-radius: 12px;
+box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+rgba(0, 0, 0, 0.12) 0px -12px 30px,
+rgba(0, 0, 0, 0.12) 0px 4px 6px,
+rgba(0, 0, 0, 0.17) 0px 12px 13px,
+rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 a {color: #000;text-decoration: none;}
 a:hover {background: #0000ff;color: #ffffff;}
