--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@ box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 I like tinkering with systems, and I’m not afraid to 
 break stuff.</p>
 
+<p>I live in the sunny <strong>Santa Clara</strong>, California where the
+weather is beautiful, and you never run out of things to do.</p>
+
 <p>I’m a big believer in <strong>asking questions</strong>—It’s
 the <strong>curiosity</strong> that matters.</p>
 
