--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@ Cloud Foundation</strong></a>.<p>
 <ul>
 <li><a href="https://zerotohero.dev">I blog at 
 <strong>Zero to Hero</strong></a>.</li>
+<li><a href="https://vcf.wtf"><strong>vcf.wtf</strong>: <em>VCF Where
+to Focus</em> is my <strong>personal knowledge graph</strong> about
+<strong>VMware Cloud Foundation</strong></a>.</li>
 </ul>
 
 <h3>Zero Trust Community</h3>
